@startuml

title __DOMAIN's Class Diagram__\n

  namespace com.codecool.processwatch.domain {
    class com.codecool.processwatch.domain.AllProcessesTest {
        {static} + main()
        {static} - printInfo()
    }
  }
  

  namespace com.codecool.processwatch.domain {
    class com.codecool.processwatch.domain.Process {
        - args : String[]
        - name : String
        - parentPid : long
        - pid : long
        + Process()
        + equals()
        + getArgs()
        + getName()
        + getParentPid()
        + getPid()
        + getUserName()
        + hashCode()
        + toString()
    }
  }
  

  namespace com.codecool.processwatch.domain {
    abstract class com.codecool.processwatch.domain.ProcessDisplay {
        + display()
        {abstract} # addProcess()
        {abstract} # clear()
    }
  }
  

  namespace com.codecool.processwatch.domain {
    interface com.codecool.processwatch.domain.ProcessSource {
        {abstract} + getProcesses()
    }
  }
  

  namespace com.codecool.processwatch.domain {
    class com.codecool.processwatch.domain.ProcessWatchApp {
        + ProcessWatchApp()
        + refresh()
        + setQuery()
    }
  }
  

  namespace com.codecool.processwatch.domain {
    interface com.codecool.processwatch.domain.Query {
        {abstract} + run()
    }
  }
  

  namespace com.codecool.processwatch.domain {
    class com.codecool.processwatch.domain.User {
        - name : String
        + User()
        + getName()
    }
  }
  

  com.codecool.processwatch.domain.Process o-- com.codecool.processwatch.domain.User : user
  com.codecool.processwatch.domain.ProcessWatchApp o-- com.codecool.processwatch.domain.Query : actualQuery
  com.codecool.processwatch.domain.ProcessWatchApp o-- com.codecool.processwatch.domain.ProcessDisplay : processDisplay
  com.codecool.processwatch.domain.ProcessWatchApp o-- com.codecool.processwatch.domain.ProcessSource : processSource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
